--- a/index.html
+++ b/index.html
@@ -368,6 +368,106 @@ Here is your **original script** with all Firebase-related code and all editing 
         <div class="back-to-overview" onclick="openTab('overview')">
             返回總覽
         </div>
+            <!-- 餐廳 - fully restored -->
+        <div id="restaurants" class="sub-content">
+            <div class="location-card">
+                <h3><a href="https://www.google.com/maps/search/?api=1&query=%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97%E3%81%A0%E3%82%8B%E3%81%BE+%E6%9C%AC%E5%BA%97+Sapporo" target="_blank">成吉思汗だるま 本店</a></h3>
+                <div class="time">營業時間：11:30–23:00</div>
+                <div class="desc">札幌最老字號成吉思汗烤羊肉店，新鮮羊肉在鐵鍋上滋滋作響，肉汁香濃，超受當地人歡迎。</div>
+                <div class="price">建議價格：HK$300–500/人</div>
+                <a href="https://tabelog.com/tw/hokkaido/A0101/A010103/1000007/" target="_blank">Tabelog 連結</a>
+            </div>
+            <div class="location-card">
+                <h3><a href="https://www.google.com/maps/search/?api=1&query=Itadakimasu.+Sapporo" target="_blank">Itadakimasu.</a></h3>
+                <div class="time">營業時間：16:00–22:00</div>
+                <div class="desc">隱藏版居酒屋，專門提供北海道新鮮海鮮與創意小菜，氣氛溫馨適合小酌。</div>
+                <div class="price">建議價格：HK$400–600/人</div>
+                <a href="https://tabelog.com/en/hokkaido/A0101/A010103/1036161/" target="_blank">Tabelog 連結</a>
+            </div>
+            <div class="location-card">
+                <h3><a href="https://www.google.com/maps/search/?api=1&query=%E5%A4%A7%E9%BB%91%E5%B1%8B+Sapporo" target="_blank">大黒屋</a></h3>
+                <div class="time">營業時間：16:00–23:30</div>
+                <div class="desc">薄野經典居酒屋，招牌烤雞串與海鮮燒烤超美味，氣氛熱鬧。</div>
+                <div class="price">建議價格：HK$350–550/人</div>
+                <a href="https://tabelog.com/tw/tokyo/A1301/A130103/13291185/" target="_blank">Tabelog 連結</a>
+            </div>
+            <div class="location-card">
+                <h3><a href="https://www.google.com/maps/search/?api=1&query=%E5%A4%A7%E8%A1%86%E7%82%AD%E7%81%AB%E7%83%A4%E8%82%89%E3%82%B8%E3%83%B3%E3%82%AE%E3%82%B9%E3%82%AB%E3%83%B3+%E3%83%9B%E3%83%AB%E3%83%A2%E3%83%B3%E9%85%92%E5%A0%B4+Sapporo" target="_blank">大衆炭火焼肉ジンギスカン ホルモン酒場</a></h3>
+                <div class="time">營業時間：16:00–23:30</div>
+                <div class="desc">平價炭火烤羊肉與內臟專門店，羊肉鮮嫩多汁，適合大口吃肉。</div>
+                <div class="price">建議價格：HK$250–400/人</div>
+                <a href="https://tabelog.com/tw/hokkaido/A0101/A010101/1028121/" target="_blank">Tabelog 連結</a>
+            </div>
+            <div class="location-card">
+                <h3><a href="https://www.google.com/maps/search/?api=1&query=%E3%81%97%E3%82%8D%E3%81%8F%E3%81%BE+Sapporo" target="_blank">しろくま</a></h3>
+                <div class="time">營業時間：18:00–01:00</div>
+                <div class="desc">薄野隱密咖喱專門店，深夜限定，湯頭濃郁香辣，是宵夜首選。</div>
+                <div class="price">建議價格：HK$150–250/人</div>
+                <a href="https://tabelog.com/tw/hokkaido/A0101/A010103/1000800/" target="_blank">Tabelog 連結</a>
+            </div>
+            <div class="location-card">
+                <h3><a href="https://www.google.com/maps/search/?api=1&query=%E9%AE%A8%E8%99%95+%E5%87%9C+Sapporo" target="_blank">鮨処 凜</a></h3>
+                <div class="time">營業時間：18:00–22:00</div>
+                <div class="desc">高級壽司Omakase，師傅現場握壽司，使用北海道當季海鮮，極致新鮮。</div>
+                <div class="price">建議價格：HK$800–1,500/人</div>
+                <a href="https://tabelog.com/tw/hokkaido/A0101/A010101/1077179/" target="_blank">Tabelog 連結</a>
+            </div>
+            <div class="location-card">
+                <h3><a href="https://www.google.com/maps/search/?api=1&query=%E3%81%99%E3%81%97%E3%81%A9%E3%82%93%E3%81%B6%E3%82%8A+Sapporo" target="_blank">すしどんぶり</a></h3>
+                <div class="time">營業時間：11:30–22:30</div>
+                <div class="desc">平價壽司丼專門店，海鮮堆滿滿一大碗，CP值超高。</div>
+                <div class="price">建議價格：HK$200–400/人</div>
+                <a href="https://tabelog.com/tw/hokkaido/A0101/A010103/1077231/" target="_blank">Tabelog 連結</a>
+            </div>
+            <div class="location-card">
+                <h3><a href="https://www.google.com/maps/search/?api=1&query=%E9%AE%A8%E8%99%95+%E6%9A%81+Sapporo" target="_blank">鮨処 暁</a></h3>
+                <div class="time">營業時間：17:30–22:30</div>
+                <div class="desc">隱藏版高級壽司店，使用稀有北海道海鮮，握壽司口感極佳。</div>
+                <div class="price">建議價格：HK$700–1,200/人</div>
+                <a href="https://tabelog.com/tw/hokkaido/A0101/A010101/1081057/" target="_blank">Tabelog 連結</a>
+            </div>
+<div class="location-card">
+                <h3><a href="https://tabelog.com/en/hokkaido/A0101/A010104/1055049/" target="_blank">Lumière et ombre (リュミエール エ オンブル)</a></h3>
+                <div class="time">營業時間：11:00–19:00（定休日：火、水）</div>
+                <div class="desc">札幌人氣巧克力與蛋糕專門店，使用高品質巧克力製作精緻甜點，冬季限定口味超療癒，適合甜點控。</div>
+                <div class="price">建議價格：HK$150–400/份</div>
+                <a href="https://tabelog.com/en/hokkaido/A0101/A010104/1055049/" target="_blank">Tabelog 連結</a>
+            </div>
+
+            <div class="location-card">
+                <h3><a href="https://www.kkday.com/zh-tw/product/274989" target="_blank">だし劇場 ○△□ 札幌総本店</a></h3>
+                <div class="time">營業時間：11:00–22:00（近札幌站）</div>
+                <div class="desc">以高湯（だし）為主題的海鮮料理店，提供豐富的日式湯品與新鮮食材，包廂可用，適合團體聚餐。</div>
+                <div class="price">建議價格：HK$300–600/人</div>
+                <a href="https://tabelog.com/hokkaido/A0101/A010101/rstLst/RC/" target="_blank">Tabelog 相關連結</a>
+            </div>
+
+            <div class="location-card">
+                <h3><a href="http://pf-sasaki.com/" target="_blank">Parfait, Coffee, Liquor, Sasaki</a></h3>
+                <div class="time">營業時間：晚間至深夜（宵夜パフェ專門）</div>
+                <div class="desc">札幌超人氣宵夜パフェ店，以濃郁巧克力口味聞名，冰淇淋、慕斯、法國巧克力層層疊疊，完美結束夜晚！</div>
+                <div class="price">建議價格：HK$200–400/份</div>
+                <a href="https://www.tokyoweekender.com/food-and-drink/hokkaido-travel-guide-4-places-to-eat-and-drink-in-sapporo/" target="_blank">介紹文章</a>
+            </div>
+
+            <div class="location-card">
+                <h3><a href="https://www.instagram.com/cafe_unjour/" target="_blank">cafe_unjour</a></h3>
+                <div class="time">營業時間：上午至下午（詳細請查IG）</div>
+                <div class="desc">札幌隱藏版文青咖啡廳，氛圍舒適放鬆，適合慢活早晨、閱讀或小酌咖啡，甜點與輕食也很受歡迎。</div>
+                <div class="price">建議價格：HK$100–300/人</div>
+                <a href="https://www.instagram.com/cafe_unjour/" target="_blank">Instagram</a>
+            </div>
+
+            <div class="location-card">
+                <h3><a href="https://www.sapporo.travel/gourmet/shop/meidai-nigirimeshi-rice-ball/" target="_blank">名代にぎりめし</a></h3>
+                <div class="time">營業時間：24小時（すすきの市場內）</div>
+                <div class="desc">經典手作飯團專門店，提供醬油/鹽飯團，招牌「たらこバター」與「鮭バター」超人氣，宵夜或快速餐點首選！</div>
+                <div class="price">建議價格：HK$50–150/個</div>
+                <a href="https://www.sapporo.travel/gourmet/shop/meidai-nigirimeshi-rice-ball/" target="_blank">官方介紹</a>
+            </div>
+
+            <div class="back-to-overview" onclick="openTab('overview')">返回總覽</div>
+        </div>
     </div>
 </div>
 <script>
