--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-Here is your **original script** with all Firebase-related code and all editing buttons removed:
-
-```html:disable-run
 <!DOCTYPE html>
 <html lang="zh-HK">
 <head>
@@ -369,7 +366,7 @@ Here is your **original script** with all Firebase-related code and all editing 
             返回總覽
         </div>
             <!-- 餐廳 - fully restored -->
-    <div id="restaurants" class="sub-content">
+    <div id="restaurants" class="sub-content active">      
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97%E3%81%A0%E3%82%8B%E3%81%BE+%E6%9C%AC%E5%BA%97+Sapporo" target="_blank">成吉思汗だるま 本店</a></h3>
                 <div class="time">營業時間：11:30–23:00</div>
